2004-10-01 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Added documentation of vtkgdcmReader on Website:
     - testvtkGdcmReader.cxx renamed to vtkGdcmDemo.cxx (to be compatible
       with it's binary name).
     - vtk/vtkGdcmDemo.cxx and vtkgdcmViewer.cxx: added comments for
       the Website to be more complete.
     - Doc/doxygen.config.in: vtk/vtkGdcmReader.cxx now appears on 
       doxygenated documentation.
     - Doc/DoxyVtkGdcmReaderExamples.txt added
       (see http://www.creatis.insa-lyon.fr/Public/Gdcm/html.developper/
                  DoxyVtkGdmReaderExamples.html )
  * src/win32, vtk/win32 manually maintained .dsp and .dsw removed.
  * CLEANUP_ROUND (3) for gdcmPixelConvert
   - src/gdcmFile.cxx, gdcmFile.h splitting GetImageDataIntoVectorRaw

2004-09-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * CLEANUP_ROUND (2) for gdcmPixelConvert
   - src/gdcmFile.cxx, gdcmFile.h splitting GetImageDataIntoVectorRaw

2004-09-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * CLEANUP_ROUND for gdcmPixelConvert:
    - src/gdcmFile.cxx, gdcmFile.h, gdcmHeader.cxx, gdcmHeader.h clean up
    - src/gdcmPixelStuff[h|cxx] removed
    - src/gdcmPixelConvert[h|cxx] added. Preparatory work included.
    - src/CMakeLists.txt changed accordingly
  * GDCMHOME clean up:
    - MANIFEST.in, WrapSwig.py, WrapVTK.py, distutilsWrapping.py and
      gdcmVersion.py moved to newly created ATTIC related
      gdcmPython/SetupOldies/ directory.
  * Autotools clean up:
    - */*/Makefile.am removed AT EXCEPTION of gdcmPython/Makefile.am
    - autogen.sh configure.in acinclude.m4 python.m4 removed 

2004-09-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/*.cxx *.h Reference to License.htm fixed to License.html.
  * Doc/CMakeLists.txt, doxygen.config.in: fix.
  * Doc/Website/ConformanceSummary.html, minimal conformance statement added.

2004-09-24 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * TODO updated with Mathieu suggestions. I proposed a template for